# ocamlhi

./: .gitignore  .ocamlformat  .ocamlformat-ignore  ChangeLog.md  LICENSE  Makefile  Readme.md  executor.sh  ocaml.fc  ocamlhi.cabal  test_style.sh  unittests.py
.github/workflows/: haskell.yml
assets/: demo.cast
docker/: haskell9.dockerfile
poc/specification/: Modules.md  Records.md  StaticBinding.md  TypeInference.md
src/: Context.hs  Dependencies.hs  ErrM.hs  Flags.hs  Grammar.hs  Initializable.hs  Interpreter.hs  LexOcaml.x  Memory.hs  Ocamlhi.hs  Operators.hs  ParOcaml.y  PatternMatching.hs  PrintOcaml.hs  StaticBinding.hs  StaticTyping.hs  Terms.hs  TopologicalSort.hs  TypeConstraint.hs  Types.hs  UtilsOcaml.hs
src/Autogen/: ErrM.hs  Grammar.hs  Lexer.x  Parser.y  Print.hs
tests/: Readme.md
tests/bad/: B_Assignment.ml  B_DivideByZero.ml  B_ImmutableField.ml  B_LocalVariableBinding.ml  B_ModuleName.ml  B_ModuleOverlap.ml  B_ModulePrivate.ml  B_ModuleSignature.ml  B_ModuleSignature2.ml  B_Nil.ml  B_NoMatching.ml  B_RecordType.ml  B_RefExpected.ml  B_Tuple.ml  B_UndefinedVariable.ml  Constructor.ml  ImmutableField.ml  LazyEvaluation.ml  MismatchedSignature.ml  MismatchedType.ml  MissingDefinition.ml  MissingModuleSignature.ml  NoMatching.ml  OverlappingFields.ml  OverlappingModules.ml  OverlappingType.ml  PrivateModuleMember.ml  ReferenceExpected.ml  UndefinedVariable2.ml  UndefinedVariable3.ml
tests/good/: 00_LocalDefinition.ml  00_Reference.ml  01_Constants.ml  02_Arithmetic.ml  02_Division.ml  02_Tuple.ml  03_IfExpressions.ml  04_Function.ml  04_FunctionOp.ml  04_Recursion.ml  05_AnonymousFunction.ml  05_HigherOrderFunction.ml  05_LetInStatement.ml  05_MatchInt.ml  05_PartialFunction.ml  06_LocalDefinition.ml  06_StaticBinding.ml  06_StaticBinding2.ml  07_For.ml  07_While.ml  08_PatternMatching.ml  09_List.ml  10_FunctionList.ml  10_List.ml  10_Mergesort.ml  11_MatchWith.ml  11_Matrix.ml  11_Maybe.ml  11_PolymorphicList.ml  12_List.ml  12_StaticBinding.ml  12_StaticBinding2.ml  12_StaticBinding3.ml  12_Tree.ml  13_StdlibPreview.ml  13_Tree.ml  13_TypeSignature.ml  13_Typedef.ml  13_Types.ml  14_EitherTree.ml  (+18 more)
tests/stdlib/: assert.ml  either.ml  include.ml  list.ml  math.ml  maybe.ml  nn.ml  pair.ml  stdlib.c  stdlib.ml  tree.ml
