cabal-version:       3.8

name:                ocamlhi
version:             1.0.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              pilusx
-- maintainer:       
-- copyright:
category:            Language
extra-source-files:  Readme.md, ChangeLog.md

executable ocamlhi
  default-language:    Haskell2010
  main-is:             Ocamlhi.hs
  hs-source-dirs:      src
  other-modules:       
    Context, Dependencies, ErrM, Flags, Grammar, Initializable, Interpreter, 
    LexOcaml, Memory, Operators, ParOcaml, PrintOcaml, StaticBinding, 
    StaticTyping, TopologicalSort, TypeConstraint, Types, UtilsOcaml, 

  build-depends:
    base ==4.19.*,
    array ==0.5.*,
    bimap ==0.4.*,
    containers ==0.6.*,
    exceptions ==0.10.*,
    filepath ==1.4.*,
    lens ==5.3.*,
    monad-loops ==0.4.*,
    mtl ==2.3.*,
    template-haskell ==2.21.*,
    th-abstraction ==0.7.*,
    transformers ==0.6.*,
    unification-fd ==0.11.*
  build-tool-depends:
    alex:alex,
    happy:happy

test-suite TestDynamic
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestDynamic.hs
  hs-source-dirs:      poc
  build-depends:
    base ==4.19.*,
    containers ==0.6.*

test-suite TestMemory
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestMemory.hs
  hs-source-dirs:      src, poc
  other-modules:
    Memory
  build-depends:
    base ==4.19.*,
    containers ==0.6.*,
    HUnit ==1.6.*,
    lens ==5.3.*,
    mtl ==2.3.*,

test-suite TestTemplate
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestTemplate.hs
  hs-source-dirs:      poc
  build-depends:
    base ==4.19.*,
    transformers ==0.6.*,

test-suite TestTransformers
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestTransformers.hs
  hs-source-dirs:      poc
  build-depends:
    base ==4.19.*,
    HUnit ==1.6.*,
    lens ==5.3.*,
    mtl ==2.3.*,
    transformers ==0.6.*

test-suite TestUnification
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestUnification.hs
  hs-source-dirs:      poc
  build-depends:
    base ==4.19.*,
    HUnit ==1.6.*,
    mtl ==2.3.*,
    transformers ==0.6.*,
    unification-fd ==0.11.*

test-suite TestUnit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestUnit.hs
  hs-source-dirs:      poc
  build-depends:
    base ==4.19.*,
    bytestring ==0.12.*,
    containers ==0.6.*,
    directory ==1.3.*,
    filepath ==1.4.*,
    HUnit ==1.6.*,
    process ==1.6.*,
    regex ==1.1.*