cabal-version:       3.8

name:                ocamlhi
version:             1.1.0.0
synopsis:            Caml interpreter
description:
  This package contains a simple interpreter with various algorithms such as
  static binding and static typing.
  Check the /tests directory for comprehensive examples of the Caml language.
license:             BSD-3-Clause
license-file:        LICENSE
author:              pilusx
maintainer:          pilusx       
copyright:           (c) 2020-2025 pilusx
category:            Language
extra-source-files:  Makefile, ocaml.fc, unittests.py
extra-doc-files:     ChangeLog.md, Readme.md, assets/ocamlhi.jpeg
tested-with:         GHC == 9.8.2
source-repository head
  type:     git
  location: https://github.com/pilusx/ocamlhi.git


library ocamlhi-autogen
  default-language:    Haskell2010
  hs-source-dirs:      src/Autogen
-- Happy is not happy with strict data :D
  default-extensions:  NoStrictData
  exposed-modules:       
    ErrM, Grammar, Lexer, Parser, Print
  build-depends:
    base ==4.19.*,
    array ==0.5.*,
    containers ==0.6.*,
    filepath ==1.4.*,
    unification-fd ==0.11.*,
  build-tool-depends:
    alex:alex ==3.5.*,
    happy:happy ==1.20.*

executable ocamlhi
  default-language:    Haskell2010
  main-is:             Ocamlhi.hs
  default-extensions:  Strict
  hs-source-dirs:      src
  ghc-options:         -Wall
  autogen-modules: 
    Paths_ocamlhi
  other-modules:
    Context, Flags, Interpreter, 
    Operators, Paths_ocamlhi, PatternMatching, 
    StaticBinding, Terms, Types

  build-depends:
    base ==4.19.*,
    aeson ==2.2.*,
    aeson-pretty ==0.8.*,
    array ==0.5.*,
    bimap ==0.4.*,
    bytestring ==0.12.*,
    containers ==0.6.*,
    directory == 1.3.*,
    exceptions ==0.10.*,
    exon ==1.7.*,
    extra == 1.8.*,
    filepath ==1.4.*,
    lens ==5.3.*,
    monad-loops ==0.4.*,
    mtl ==2.3.*,
    optparse-applicative ==0.18.*,
    template-haskell ==2.21.*,
    text ==2.1.*,
    th-abstraction ==0.7.*,
    transformers ==0.6.*,
    unification-fd ==0.11.*,
    ocamlhi:ocamlhi-autogen

test-suite TestConvert
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestConvert.hs
  hs-source-dirs:      tests
  build-depends:
    base ==4.19.*,
    transformers ==0.6.*,

test-suite TestDynamic
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestDynamic.hs
  hs-source-dirs:      tests
  build-depends:
    base ==4.19.*,
    containers ==0.6.*

test-suite TestTransformers
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestTransformers.hs
  hs-source-dirs:      tests
  build-depends:
    base ==4.19.*,
    HUnit ==1.6.*,
    lens ==5.3.*,
    mtl ==2.3.*,
    transformers ==0.6.*

test-suite TestUnification
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             TestUnification.hs
  hs-source-dirs:      tests
  build-depends:
    base ==4.19.*,
    HUnit ==1.6.*,
    mtl ==2.3.*,
    transformers ==0.6.*,
    unification-fd ==0.11.*
